refactor: streamline email recipient handling and enhance EmailService with connection timeouts